# spiral-atcg

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  REVIEW.md  SECURITY.md  build_windows_mingw.bat
.github/workflows/: ci.yml
bench/: benchmark.c
docs/: ADVANCED_AUDIT.md  CHANGELOG_v2.1.1.md  CHANGELOG_v2.2.1.md  CHANGELOG_v2.2.2.md  CHANGELOG_v2.2.4.md  CHANGELOG_v2.2.4_security_battery.md  INDEX.md  KAT.md  QRES_data.csv  QRES_summary.md  SECURITY_AUDIT.md  SPEC.md  SUBSTRATE.md  audit_adv_battery.csv  audit_q_battery.csv  audit_sec_battery.csv
include/: spiral_atcg.h
src/: spiral_atcg.c
tests/: kat_generator.c  qres_v2_runner.c  test_adv_battery.c  test_adv_c1_distinct.c  test_adv_c3_distinct.c  test_avalanche.c  test_batch_api.c  test_material_trace.c  test_pair_symmetry.c  test_q_battery.c  test_roundtrip.c  test_sec_battery.c  test_thorough_avalanche.c
